# entropictron

./: AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md
artwork/: README
doc/: CMakeLists.txt  Entropictron_User_Guide.md
presets/: CMakeLists.txt  EntropictronPresets.tar.xz  EntrpictronPresets.tar.xz
src/: CrackleModel.cpp  CrackleModel.h  CrackleWidget.cpp  CrackleWidget.h  DesktopPaths.cpp  DesktopPaths.h  DspCrackleProxy.cpp  DspCrackleProxy.h  DspGlitchProxy.cpp  DspGlitchProxy.h  DspNoiseProxy.cpp  DspNoiseProxy.h  DspPitchProxy.cpp  DspPitchProxy.h  DspProxy.cpp  DspProxy.h  DspRgateProxy.cpp  DspRgateProxy.h  EntAbstractModel.cpp  EntAbstractModel.h  EntAbstractView.cpp  EntAbstractView.h  EntState.cpp  EntState.h  EntWidget.cpp  EntWidget.h  EntropictronModel.cpp  EntropictronModel.h  EntropyMeter.cpp  EntropyMeter.h  GlitchModel.cpp  GlitchModel.h  GlitchWidget.cpp  GlitchWidget.h  GlobalControlsWidget.cpp  GlobalControlsWidget.h  GuiTypes.h  Knob.cpp  Knob.h  MainWindow.cpp  (+19 more)
src/DspWrapper/: CMakeLists.txt  DspFrameTimer.cpp  DspFrameTimer.h  DspTypes.h  DspWrapper.cpp  DspWrapper.h  DspWrapperCrackle.cpp  DspWrapperCrackle.h  DspWrapperGlitch.cpp  DspWrapperGlitch.h  DspWrapperGlitcher.cpp  DspWrapperGlitcher.h  DspWrapperNoise.cpp  DspWrapperNoise.h  DspWrapperPitch.cpp  DspWrapperPitch.h  DspWrapperRgate.cpp  DspWrapperRgate.h
src/dsp/: CMakeLists.txt
src/dsp/src/: audio_output.c  audio_output.h  distortion.c  distortion.h  ent_audio.c  ent_audio.h  ent_buffer.c  ent_buffer.h  ent_burster.c  ent_burster.h  ent_chaos.c  ent_chaos.h  ent_crackle.c  ent_crackle.h  ent_defs.h  ent_filter.c  ent_filter.h  ent_glitch.c  ent_glitch.h  ent_glitcher.c  ent_glitcher.h  ent_jack.c  ent_jack.h  ent_lfo.h  ent_log.c  ent_log.h  ent_noise.c  ent_noise.h  ent_pitch.c  ent_pitch.h  ent_rgate.c  ent_rgate.h  ent_shelf_filter.c  ent_shelf_filter.h  ent_state.c  ent_state.h  ent_state_internal.h  ent_version.h  entropictron.c  entropictron.h  (+16 more)
src/dsp/src/quamplex_dsp_tools/: qx_math.h
src/plugin/: CMakeLists.txt
src/plugin/lv2/: CMakeLists.txt  geonkick_lv2.cpp
src/plugin/lv2/geonkick.lv2/: geonkick.ttl  manifest.ttl
src/plugin/lv2/geonkick_win.lv2/: geonkick.ttl  manifest.ttl
src/plugin/vst/: CMakeLists.txt  DspCrackleProxyVst.cpp  DspCrackleProxyVst.h  DspGlitchProxyVst.cpp  DspGlitchProxyVst.h  DspNoiseProxyVst.cpp  DspNoiseProxyVst.h  DspPitchProxyVst.cpp  DspPitchProxyVst.h  DspRgateProxyVst.cpp  DspRgateProxyVst.h  DspVstProxy.cpp  DspVstProxy.h  EntVstController.cpp  EntVstController.h  EntVstLoopTimer.cpp  EntVstLoopTimer.h  EntVstParameters.h  EntVstPluginView.cpp  EntVstPluginView.h  EntVstProcessor.cpp  EntVstProcessor.h  GKickVstProcessor.cpp  GKickVstProcessor.h  VstFactory.cpp  VstIds.h
src/redkite/: CMakeLists.txt  README.md
src/redkite/include/: RkButton.h  RkContainer.h  RkContainerItem.h  RkEvent.h  RkObject.h  RkPainter.h  RkScroolbar.h  RkWidget.h
src/redkite/src/: RkCairoGraphicsBackend.cpp  RkContainer.cpp  RkLabel.cpp  RkObject.cpp  RkObjectImpl.cpp  RkPainter.cpp  RkScroolbar.cpp  RkWidget.cpp  RkWidgetImpl.cpp
src/redkite/tools/: CMakeLists.txt
src/resources/: resources.rc
src/standalone/: CMakeLists.txt  main.cpp
